--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="formas de contactarse con la empresa Asfaltar">
+    <meta name="keywords" content="telefono, comunicacion, contacto, Asfaltar">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
     <title>Asfaltar-Tareas-Viales</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/main.css">
     <link rel="shortcut icon" href="../Images/logo-ventana.png" type="image/x-icon">
   </head>
 
@@ -46,25 +48,20 @@
             </div>   
     </header>
    <!-- Fin Header -->
-   <main>
-            <div>
-                <h1 class="text-center">Contacto</h1>
-                    <p style="margin-left: 10px">52513214142</p>
-                    <p style="margin-left: 10px">asfaltar@gmail.com</p>
-                    <p style="margin-left: 10px">Las palmas 123</p>
-            </div>   
-           <h3 class="text-center">Contactate con nosotros</h3>
-           <section>
-            <label for="Nombre">Nombre y Apellido:</label>
-            <input type="text" id="Nombre">
-            <label for="Telefono">Telefono:</label>
-            <input type="text" id="Telefono">
-            <label for="Correo">Correo:</label>
-            <input type="text" id="Correo">
-            <label for="Mensaje">Su Mensaje:</label>
-            <input type="text" id="Mensaje">
-           </section>
-         </div>
+   <h1 class="text-center">CONTACTO</h1>
+      
+   <div class="form-floating">
+    <input type="email" class="form-control" id="floatingInputDisabled" placeholder="name@example.com" disabled>
+    <label for="floatingInputDisabled">Email</label>
+  </div>
+  <div class="form-floating">
+    <textarea class="form-control" placeholder="su nombre y apellido" id="floatingTextareaDisabled" disabled></textarea>
+    <label for="floatingTextareaDisabled">Nombre y Apellido</label>
+  </div>
+  <div class="form-floating">
+    <textarea class="form-control" placeholder="Deje su mensaje aqui" id="floatingTextarea2Disabled" style="height: 100px" disabled></textarea>
+    <label for="floatingTextarea2Disabled">Su mensaje</label>
+  </div>
 
     </main>
     <!-- Fin Main -->
