--- a/Pages/Proyectos.html
+++ b/Pages/Proyectos.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="proyectos, trabajos realizados, rutas">
+    <meta name="keywords" content="trabajos realizados por la empresa asfaltar">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
     <title>Asfaltar-Tareas-Viales</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/main.css">
     <link rel="shortcut icon" href="../Images/logo-ventana.png" type="image/x-icon">
   </head>
 
