--- a/Pages/Servicios.html
+++ b/Pages/Servicios.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="servicios, tareas, camiones, obras">
+    <meta name="keywords" content="trabajos realizados por la empresa asfaltar">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
     <title>Asfaltar-Tareas-Viales</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/main.css">
     <link rel="shortcut icon" href="../Images/logo-ventana.png" type="image/x-icon">
   </head>
 
@@ -55,15 +57,26 @@
                 <img src="../Images/serviciospresentacion.png" alt="foto empresarial">   
             </div>
         <div class="text text-bold text-size">
-        <section>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore nulla id soluta assumenda nisi, vitae itaque neque explicabo. Nobis unde, eaque omnis suscipit maiores ex labore. Labore illum cupiditate excepturi?
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime doloremque quod quam saepe dolore. Rem, dicta ea error saepe veniam eos iste ad quod dignissimos, neque ratione explicabo placeat expedita?
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, consequuntur, quo maxime molestias temporibus labore reprehenderit adipisci quae voluptate et voluptates soluta ullam minus distinctio itaque in natus dolore similique!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti praesentium rerum doloribus repellendus voluptatibus reprehenderit commodi tempora, blanditiis alias rem error placeat adipisci earum. Itaque architecto earum eius at minus?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio iusto consequuntur at repudiandae reprehenderit non beatae repellendus nesciunt quod quasi neque libero, accusamus impedit, eum ratione magni obcaecati laboriosam commodi.
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium beatae molestiae odio, iusto sit repellendus tempore, velit praesentium ab, repellat ipsam reprehenderit quasi natus porro ratione similique suscipit temporibus accusantium.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis excepturi sequi doloremque tenetur sapiente ipsa quam reprehenderit! Facere itaque pariatur quos officia aut cupiditate, vitae maxime eaque harum voluptatem vero?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur earum beatae, veniam dolor recusandae enim, quibusdam ratione accusamus distinctio debitis delectus aperiam dicta quae reiciendis ex. Non impedit praesentium voluptate.
+        <section class="contenedor2 text-center">
+            <div>
+            <p>TOPADORAS</p>
+
+            <p>RETROEXCAVADORAS</p>
+
+            <p> MOTONIVELADORAS</p>
+
+            <p>RETROPALAS</p>
+
+            <p> VIBROCOMPACTADORES AUTOPROPULSADOS</p>
+
+            <p> CAMIONES</p>
+
+            <p>CAMIONETAS</p>
+
+            <p>SEMIS</p>
+
+            <p>CARRETONES</p>
+
         </section>
         </div>
     </main>
