--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
     <title>Asfaltar-Tareas-Viales</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/main.css">
     <link rel="shortcut icon" href="Images/logo-ventana.png" type="image/x-icon">
   </head>
 
