--- a/Pages/Nosotros.html
+++ b/Pages/Nosotros.html
@@ -68,7 +68,7 @@
           <p class="text-center text-bold text-black">¡Gracias por confiar en nosotros!</p>
           
         </section>
-         <div class="text-center">
+         <div class="img-center">
              <img src="../Images/nosotros.jpg" alt="foto empresarial">   
          </div>
 
