--- a/Pages/Servicios.html
+++ b/Pages/Servicios.html
@@ -53,7 +53,7 @@
             <div>
                 <h1 class="text-center">Servicios</h1>
             </div>
-            <div class="text-center">
+            <div class="img-center">
                 <img src="../Images/serviciospresentacion.png" alt="foto empresarial">   
             </div>
         <div class="text text-bold text-size">
